# Northcape

./: .gitignore  README.md
hardware/constraints/: Genesys-2-Master.xdc  arty_a7_100.xdc  fix_debug_core.tcl  fix_tx_ctl.tcl  project_constraints.xdc
hardware/debug/: trigger_cpu_mmu_input_not_equal_output.tsm  trigger_failed_cap_ops_merge.tsm  trigger_give_0_to_inspect.tsm  trigger_last_attempted_axi_transaction.tsm  trigger_read_restriction_zero.tsm  trigger_resolver_timeout_error.tsm
paper_artifact/: README.md
paper_artifact/raw_eval_data/: code_size_hello_world_skadi_northcape.txt  code_size_hello_world_zephyr_northcape.txt  code_size_http_server_skadi_northcape.txt  code_size_http_server_zephyr_northcape.txt  code_size_zperf_skadi_northcape.txt  code_size_zperf_zephyr_northcape.txt  load_time_hello_world_zephyr_northcape.txt  load_time_http_server_skadi.txt  load_time_http_server_zephyr_northcape.txt  load_time_zperf_skadi.txt  load_time_zperf_zephyr_northcape.txt  microbench_skadi_northcape.txt  microbench_skadi_northcape_cycles.txt  microbench_syscall.txt  mqtt_linux_mosquitto.txt  mqtt_skadi_mosquitto.txt  mqtt_zephyr_mosquitto.txt  net_mqtt_skadi_northcape.txt  net_mqtt_zephyr_northcape.txt  net_zperf_trace_skadi.txt  net_zperf_trace_zephyr.txt  network_overhead_skadi_northcape.txt  network_overhead_zephyr_northcape.txt  ping_linux_northcape.txt  (+21 more)
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/dumb_http_server/: CMakeLists.txt  prj.conf
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/dumb_http_server/src/: socket_dumb_http.c
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/mqtt_bench/: CMakeLists.txt  Kconfig  prj.conf  profile_tls.prj  tls.conf
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/mqtt_bench/src/: .gitignore  config.h  main.c  test_certs.h
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/network_stack_overhead_measurement/: CMakeLists.txt  prj.conf  profile.prj
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/network_stack_overhead_measurement/src/: network_stack_overhead.c
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/subsystem/: CMakeLists.txt  Kconfig  prj.conf
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/subsystem/src/: dummy_encrypt_subsys.h  dummy_encrypt_subsys_provider.c  dummy_encrypt_subsys_tester.c  main.c
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/timer_irq/: CMakeLists.txt  Kconfig  nmi.conf  prj.conf  rate_bench.conf  rate_bench_nmi.conf
software/include/northcape-zephyr-stack/samples/boards/openhwgroup/cv64a6/timer_irq/src/: busy_waiter.c  irq_client.c  main.c
software/include/northcape-zephyr-stack/subsys/net/: CMakeLists.txt  Kconfig  hostname.c
software/include/northcape-zephyr-stack/subsys/net/conn_mgr/: conn_mgr_monitor.c
software/include/northcape-zephyr-stack/subsys/net/ip/: CMakeLists.txt  Kconfig  connection.c  icmp.c  icmpv4.c  igmp.c  ipv4.h  ipv4_acd.c  ipv4_fragment.c  ipv6_mld.c  ipv6_nbr.c  ipv6_pe.c  net_context.c  net_core.c  net_if.c  net_mgmt.c  net_pkt.c  net_stats.c  route.c  skadi_net_if.c  skadi_net_pkt.c  skadi_net_tc.c  skadi_tcp.c  tcp.c  tcp_private.h  utils.c
software/include/northcape-zephyr-stack/subsys/net/l2/ethernet/: CMakeLists.txt  arp.h  ethernet.c  skadi_arp.c
software/include/northcape-zephyr-stack/subsys/net/l2/ethernet/gptp/: Kconfig  gptp.c  gptp_md.c  gptp_messages.c
software/include/northcape-zephyr-stack/subsys/net/lib/config/: CMakeLists.txt  skadi_init.c
software/include/northcape-zephyr-stack/subsys/net/lib/dhcpv4/: CMakeLists.txt
software/include/northcape-zephyr-stack/subsys/net/lib/dns/: resolve.c
software/include/northcape-zephyr-stack/subsys/net/lib/http/: CMakeLists.txt  http_server_core.c
software/include/northcape-zephyr-stack/subsys/net/lib/mqtt/: CMakeLists.txt  mqtt.c  mqtt_os.h  mqtt_transport_socket_tcp.c  mqtt_transport_socket_tls.c
software/include/northcape-zephyr-stack/subsys/net/lib/ptp/: CMakeLists.txt  msg.c
software/include/northcape-zephyr-stack/subsys/net/lib/shell/: CMakeLists.txt  iface.c
software/include/northcape-zephyr-stack/subsys/net/lib/sockets/: CMakeLists.txt  getaddrinfo.c  getnameinfo.c  skadi_socketpair.c  skadi_sockets.c  skadi_sockets_tls.c  socket_obj_core.c  sockets.c  sockets_select.c  sockets_service.c
software/include/northcape-zephyr-stack/subsys/net/lib/tls_credentials/: CMakeLists.txt  tls_credentials.c  tls_credentials_trusted.c
software/include/northcape-zephyr-stack/subsys/net/lib/utils/: CMakeLists.txt
software/include/northcape-zephyr-stack/subsys/net/lib/zperf/: CMakeLists.txt  zperf_common.c  zperf_internal.h  zperf_shell.c  zperf_tcp_receiver.c  zperf_tcp_uploader.c  zperf_udp_receiver.c  zperf_udp_uploader.c
software/include/northcape-zephyr-stack/subsys/profiling/perf/: CMakeLists.txt  Kconfig  perf_skadi.c
software/include/northcape-zephyr-stack/subsys/profiling/perf/backends/: CMakeLists.txt  Kconfig  perf_riscv_skadi.c
software/include/northcape-zephyr-stack/subsys/shell/: CMakeLists.txt  Kconfig  shell.c  shell_log_backend.c  shell_ops.c  shell_utils.c  shell_wildcard.c  skadi_shell.c
software/include/northcape-zephyr-stack/subsys/shell/backends/: CMakeLists.txt  shell_uart.c
software/include/northcape-zephyr-stack/tests/benchmarks/latency_measure/: CMakeLists.txt  prj.conf
software/include/northcape-zephyr-stack/tests/benchmarks/latency_measure/src/: condvar.c  events.c  fifo.c  heap_malloc_free.c  int_to_thread.c  lifo.c  main.c  mutex_lock_unlock.c  sema_test_signal_release.c  stack.c  thread.c  thread_switch_yield.c  timing_sc.c  timing_sc.h  utils.h
software/include/northcape-zephyr-stack/tests/benchmarks/northcape-coremark/zephyr/: CMakeLists.txt  core_portme.c  core_portme.h  prj.conf
software/include/northcape-zephyr-stack/tests/benchmarks/northcape-stream/: CMakeLists.txt  Kconfig  prj.conf  small_mem.conf  stream.c
(+981 files in other folders)
